backend/dev/k8s/integration_tests.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exampleapp-examples-integration-tests
  namespace: exampleapp-dev
  labels:
    app: exampleapp-examples-integration-tests
spec:
  restartPolicy: Never
  containers:
  - name: tests
    image: exampleapp-examples-integration-tests
    ports:
      - containerPort: 22
    resources:
      requests:
        cpu: '500m'
        memory: '200Mi'
      limits:
        cpu: '4'
        memory: '4Gi'
