backend/dev/k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exampleapp-examples-api
  namespace: exampleapp-dev
  labels:
    app: exampleapp-examples-api
spec:
  selector:
    matchLabels:
      app: exampleapp-examples-api
  replicas: 1
  template:
    metadata:
      labels:
        app: exampleapp-examples-api
    spec:
      volumes:
        - name: wellknown-volume
          configMap:
            name: exampleapp-wellknown
      containers:
        - name: api
          image: exampleapp-examples-api
          ports:
            - containerPort: 8080
            - containerPort: 22
          volumeMounts:
            - name: wellknown-volume
              mountPath: /.well-known
              readOnly: true
          resources:
            requests:
              cpu: "1"
              memory: "200Mi"
            limits:
              cpu: "4"
              memory: "5Gi"
          livenessProbe:
            httpGet:
              path: /live/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /live/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: exampleapp-examples-api-svc
  namespace: exampleapp-dev
  labels:
    app: exampleapp-examples-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: exampleapp-examples-api
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: exampleapp-path-strip
  namespace: exampleapp-dev
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exampleapp-examples-api-ingress
  namespace: exampleapp-dev
spec:
  rules:
    - host: exampleapp.local.lncd.pl
      http:
        paths:
          - path: /api
            backend:
              service:
                name: exampleapp-examples-api-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
          - path: /leanpipe
            backend:
              service:
                name: exampleapp-examples-api-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
          - path: /.well-known
            backend:
              service:
                name: exampleapp-examples-api-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
