backend/dev/k8s/leanpipe_funnel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exampleapp-leanpipe-funnel
  namespace: exampleapp-dev
  labels:
    app: exampleapp-leanpipe-funnel
spec:
  selector:
    matchLabels:
      app: exampleapp-leanpipe-funnel
  replicas: 1
  template:
    metadata:
      labels:
        app: exampleapp-leanpipe-funnel
    spec:
      containers:
        - name: leanpipe-funnel
          image: exampleapp-leanpipe-funnel
          ports:
            - containerPort: 8080
            - containerPort: 22
          resources:
            requests:
              cpu: "1"
              memory: "200Mi"
            limits:
              cpu: "2"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: exampleapp-leanpipe-funnel-svc
  namespace: exampleapp-dev
  labels:
    app: exampleapp-leanpipe-funnel
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: exampleapp-leanpipe-funnel
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exampleapp-leanpipe-funnel-ingress
  namespace: exampleapp-dev
spec:
  rules:
    - host: leanpipefunnel.exampleapp.local.lncd.pl
      http:
        paths:
          - path: /leanpipe
            backend:
              service:
                name: exampleapp-leanpipe-funnel-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
